--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "watch": "webpack --config webpack.config.js --watch",
+    "dev": "webpack-dev-server --config webpack.config.js"
   },
   "keywords": [],
   "author": "TAEHWAN SONG",
@@ -18,6 +20,7 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
